syntax = "proto3";

package echo;

service Echo {
  rpc Echo (EchoRequest) returns (EchoReply);
}

message EchoRequest {
  string msg = 1;
}

message EchoReply {
  string msg = 1;
}
